# vismod

./: .env.example  .gitignore  LICENSE  LICENSE.txt  PNB_Reading_2023-08-15_to_2023-08-17.csv  README.md  preProcessing.py  pyproject.toml  script.py  tests.py
.devcontainer/: Dockerfile.dev  Makefile  devcontainer.json  docker-compose.yaml  docker-compose.yml
.devcontainer/grafana/: grafana.ini
.devcontainer/grafana/dashboards/: ExposedAirTemp.json  PNB_Visualizations.json
.devcontainer/grafana/provisioning/dashboards/: ExposedTemps.yaml
.devcontainer/grafana/provisioning/datasources/: influx.yaml
.devcontainer/influx/: Dockerfile  example-data.csv  influx-setup.sh
.devcontainer/python-dev/: Dockerfile
.devcontainer/src/: script.py
.github/workflows/: build.yaml  deploy-infra.yaml  deploy.yaml
infrastructure/: deploy-prod.yaml  deploy.yaml  inventory.yaml  server-setup.yaml
infrastructure/files/: flask-web.service  influx-config.toml  vismod-processing.service  vismod-processing.timer
infrastructure/tasks/: influx-install.yaml  nginx-certbot.yaml
infrastructure/templates/: grafana.ini  nginx.conf  secrets
src/: oop_pre_processing.py  script_pre_rocessing.py
src/raw-DAQ-files/: sensorCalib.xlsx
src/vismod_processing/: __init__.py  __main__.py  config.csv  config_fetch.py  data.json  data_fetch.py  driveDownloader.py  exportInfluxAsCSV.py  importDataFromPandas.py  influx.py  influx_cli.py  oop_pre_processing.py  pre_processing.py  run.py  script_pre_rocessing.py  syncConfig.py  uploadDatatoInflux.py
src/vismod_processing/influxDB/: importDataFromCSV.py  importDataFromPandas.py  initialization.py
src/vismod_processing/influxDB/scrappedIdeas/: annotated.csv  importDataFromCSV.py  influxReady.csv  initialization.py  loadCSV.py  test.csv
src/vismod_processing/tdms_files/: 022924.tdms
src/vismod_web/: __init__.py  exportInfluxAsCSV.py  utils.py
src/vismod_web/static/: about-pnb.css  about-site.css  base.css  components.css  index.css  index.js  layout.css  media-queries.css  modal.js  our.css  our.js  plotly_append.js  plotly_appended_js.txt  theme-dark.css  theme.js  themes.css
src/vismod_web/static/pure_css/: prism.css  purecssframework-site.css  purecssframework.min.css
src/vismod_web/templates/: about-pnb.html  about-site.html  base.html  index.html  navbar.html
src/vismod_web/user_csvs/: test.csv
tests/: 081523-Post-Processed-Ex.csv  config.xlsx  sensorCalib.csv  sensorCalib.xlsx  test_Pre_Processor.py  test_drive_download.py  test_example.py  test_web_utils.py
tests/data/: example-config.json
